--- a/public/css/app.css
+++ b/public/css/app.css
@@ -611,17 +611,14 @@ select {
 .top-0 {
   top: 0px;
 }
-.right-6 {
-  right: 1.5rem;
-}
-.left-0 {
-  left: 0px;
+.bottom-6 {
+  bottom: 1.5rem;
 }
 .right-10 {
   right: 2.5rem;
 }
-.bottom-6 {
-  bottom: 1.5rem;
+.left-0 {
+  left: 0px;
 }
 .z-0 {
   z-index: 0;
@@ -644,6 +641,9 @@ select {
 .m-1 {
   margin: 0.25rem;
 }
+.m-2 {
+  margin: 0.5rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -651,10 +651,6 @@ select {
 .-my-2 {
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
-}
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -704,6 +700,12 @@ select {
 .mb-4 {
   margin-bottom: 1rem;
 }
+.mt-1\.5 {
+  margin-top: 0.375rem;
+}
+.mb-12 {
+  margin-bottom: 3rem;
+}
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -712,21 +714,6 @@ select {
 }
 .-mr-2 {
   margin-right: -0.5rem;
-}
-.mb-12 {
-  margin-bottom: 3rem;
-}
-.mr-12 {
-  margin-right: 3rem;
-}
-.mr-6 {
-  margin-right: 1.5rem;
-}
-.mr-3 {
-  margin-right: 0.75rem;
-}
-.mt-1\.5 {
-  margin-top: 0.375rem;
 }
 .block {
   display: block;
@@ -809,29 +796,17 @@ select {
 .w-6 {
   width: 1.5rem;
 }
-.w-2\.5 {
-  width: 0.625rem;
-}
-.w-2 {
-  width: 0.5rem;
-}
-.w-3\.5 {
-  width: 0.875rem;
-}
-.w-3 {
-  width: 0.75rem;
-}
 .min-w-full {
   min-width: 100%;
 }
 .max-w-6xl {
   max-width: 72rem;
 }
-.max-w-xl {
-  max-width: 36rem;
-}
 .max-w-7xl {
   max-width: 80rem;
+}
+.max-w-xl {
+  max-width: 36rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -841,6 +816,15 @@ select {
 }
 .shrink-0 {
   flex-shrink: 0;
+}
+.basis-1\/4 {
+  flex-basis: 25%;
+}
+.basis-2\/4 {
+  flex-basis: 50%;
+}
+.basis-3\/4 {
+  flex-basis: 75%;
 }
 .origin-top-left {
   transform-origin: top left;
@@ -888,6 +872,9 @@ select {
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.flex-row {
+  flex-direction: row;
+}
 .flex-col {
   flex-direction: column;
 }
@@ -911,9 +898,6 @@ select {
 }
 .gap-4 {
   gap: 1rem;
-}
-.gap-8 {
-  gap: 2rem;
 }
 .gap-2 {
   gap: 0.5rem;
@@ -1044,6 +1028,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 58 138 / var(--tw-bg-opacity));
+}
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
@@ -1060,21 +1048,17 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
 }
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
 .bg-green-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
-.bg-blue-900 {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(30 58 138 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
-.bg-red-600 {
+.bg-yellow-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1095,11 +1079,11 @@ select {
 .p-6 {
   padding: 1.5rem;
 }
-.p-3 {
-  padding: 0.75rem;
-}
 .p-2 {
   padding: 0.5rem;
+}
+.p-3 {
+  padding: 0.75rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1145,20 +1129,19 @@ select {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pb-12 {
+  padding-bottom: 3rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -1184,17 +1167,11 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
-.pb-12 {
-  padding-bottom: 3rem;
-}
 .text-left {
   text-align: left;
 }
 .text-center {
   text-align: center;
-}
-.text-right {
-  text-align: right;
 }
 .align-middle {
   vertical-align: middle;
@@ -1726,10 +1703,6 @@ select {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:justify-start {
-    justify-content: flex-start;
-  }
-
   .md\:gap-6 {
     gap: 1.5rem;
   }
@@ -1741,10 +1714,6 @@ select {
   .md\:border-l {
     border-left-width: 1px;
   }
-
-  .md\:text-left {
-    text-align: left;
-  }
 }
 @media (min-width: 1024px) {
 
@@ -1755,18 +1724,6 @@ select {
   .lg\:-mx-8 {
     margin-left: -2rem;
     margin-right: -2rem;
-  }
-
-  .lg\:block {
-    display: block;
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .lg\:justify-between {
-    justify-content: space-between;
   }
 
   .lg\:px-8 {
